# hft-ieor4741

./: .gitignore  CMakeLists.txt  README.md  strategy.md
projects/phase-02-momentum-client/: CMakeLists.txt  hft_client  hft_client.cpp  hft_server  hft_server.cpp
projects/phase-03-order-book/: README.md  main.cpp  market_snapshot.cpp  market_snapshot.h  order_manager.cpp  order_manager.h  sample_feed.txt
projects/session-02-matrix-multiplication-memory-layout/: README.md  main.cpp  matmul
projects/session-03-virtual-non-virtual-dispatch/: README.md  hft_assignment.cpp
projects/session-04-crtp-virtual-dispatch/: README.md
projects/session-04-crtp-virtual-dispatch/include/: market_data.hpp  strategy_crtp.hpp  strategy_virtual.hpp  utils.hpp
projects/session-04-crtp-virtual-dispatch/src/: main.cpp
